Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11205

When a QML plugin depends on another QML plugin to resolve the types then it does not show the properties for the types

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 4.1.0-rc1
    • Qt Creator 3.0.0, Qt Creator 4.1.0-rc1
    • Quick Designer
    • None

    Description

      When a QML plugin depends on another QML plugin to resolve the types then it does not show the properties for the types. It works fine when running the code so the plugins are found just fine but not in design mode.

      Attached is an example that provides the plugins and one with test files to be used in Qt Creator.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thohartm Thomas Hartmann
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes