QmlDesigner.MetaInfo: Properly resolve prototypes from different plugins

If there is a non <cpp> export for the CppComponentValue
we use it.

Task-number: QTCREATORBUG-11205
Change-Id: Ia82c8fc5f567245f5d04b0fd91819bf443312e17
Reviewed-by: Fawzi Mohamed <fawzi.mohamed@digia.com>